Numbers and operators seem to work - I can add and delete them

--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
         </div>
         <div id="buttons"></div>
         <div class="row">
-            <button id = "sqrt" class = "operator">sqrt</button>
-            <button id = "parantesis" class = "operator">()</button>
+            <button id = "power" class = "operator">^</button>
+            <button id = "parantesis">()</button>
             <button id = "modulo" class = "operator">%</button>
             <button id = "divide" class = "operator">/</button>
         </div>
@@ -42,7 +42,7 @@
          <div class="row">
             <button id="sign" class = "operator">+/-</button>
             <button id="zero" class="number">0</button>
-            <button id="decimal-point" class = "operator">.</button>
+            <button id="decimal-point" >.</button>
             <button id="equal">=</button>
         </div>
     </section>
