() changed to sqrt

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <div id="buttons"></div>
         <div class="row">
             <button id = "power" class = "operator">^</button>
-            <button id = "parantesis">()</button>
+            <button id = "sqrt" class = "operator">&radic;</button>
             <button id = "modulo" class = "operator">%</button>
             <button id = "divide" class = "operator">/</button>
         </div>
