Decimal point implemeted and mino fixes
Input is read only, numbers are validated, AC resets numberOfCharacters

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <section id="calculator">
-        <input type="text" placeholder="Test" id = "screen">
+        <input type="text" placeholder="Test" id = "screen" readonly>
         <div id="menu">
             <button id="clear-all">AC</button>
             <button id="delete">Del</button>
