Parentheses implemented - validating also works

--- a/index.html
+++ b/index.html
@@ -11,8 +11,11 @@
     <section id="calculator">
         <input type="text" placeholder="Test" id = "screen" readonly>
         <div id="menu">
-            <button id="clear-all">AC</button>
+            <div class="row"><button id="clear-all">AC</button>
+            <button id="opening-brace">(</button>
+            <button id="closing-brace">)</button>
             <button id="delete">Del</button>
+            </div>
         </div>
         <div id="buttons"></div>
         <div class="row">
