--- a/index.html
+++ b/index.html
@@ -12,41 +12,46 @@
         <input type="text" placeholder="Test" id = "screen" readonly>
         <div id="menu">
             <div class="row"><button id="clear-all">AC</button>
-            <button id="opening-brace">(</button>
-            <button id="closing-brace">)</button>
+            <button id="answer">ANS</button>
             <button id="delete">Del</button>
             </div>
+            <div class="row">
+                <button id="opening-brace">(</button>
+                <button id="closing-brace">)</button>
+            </div>
         </div>
-        <div id="buttons"></div>
-        <div class="row">
-            <button id = "power" class = "operator">^</button>
-            <button id = "sqrt" class = "operator">&radic;</button>
-            <button id = "modulo" class = "operator">%</button>
-            <button id = "divide" class = "operator">/</button>
-        </div>
-        <div class="row">
-            <button id="num7" class="number">7</button>
-            <button id="num8" class="number">8</button>
-            <button id="num9" class="number">9</button>
-            <button id="multiply" class = "operator">*</button>
-        </div>
-         <div class="row">
-            <button id="num4" class="number">4</button>
-            <button id="num5" class="number">5</button>
-            <button id="num6" class="number">6</button>
-            <button id="substract" class = "operator">-</button>
-        </div>
-         <div class="row">
-            <button id="num1" class="number">1</button>
-            <button id="num2" class="number">2</button>
-            <button id="num3" class="number">3</button>
-            <button id="add" class = "operator">+</button>
-        </div>
-         <div class="row">
-            <button id="sign" class = "operator">+/-</button>
-            <button id="zero" class="number">0</button>
-            <button id="decimal-point" >.</button>
-            <button id="equal">=</button>
+        <!--fix buttons -->
+        <div id="buttons">
+            <div class="row">
+                <button id = "power" class = "operator">^</button>
+                <button id = "sqrt" class = "operator">&radic;</button>
+                <button id = "modulo" class = "operator">%</button>
+                <button id = "divide" class = "operator">/</button>
+            </div>
+            <div class="row">
+                <button id="num7" class="number">7</button>
+                <button id="num8" class="number">8</button>
+                <button id="num9" class="number">9</button>
+                <button id="multiply" class = "operator">*</button>
+            </div>
+            <div class="row">
+                <button id="num4" class="number">4</button>
+                <button id="num5" class="number">5</button>
+                <button id="num6" class="number">6</button>
+                <button id="substract" class = "operator">-</button>
+            </div>
+            <div class="row">
+                <button id="num1" class="number">1</button>
+                <button id="num2" class="number">2</button>
+                <button id="num3" class="number">3</button>
+                <button id="add" class = "operator">+</button>
+            </div>
+            <div class="row">
+                <button id="sign" class = "operator">+/-</button>
+                <button id="zero" class="number">0</button>
+                <button id="decimal-point" >.</button>
+                <button id="equal">=</button>
+            </div>
         </div>
     </section>
 </body>
