--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
             <button id="delete">Del</button>
             </div>
             <div class="row">
+                <button id = 'cursor-left'>&larr;</button>
+                <button id="cursor-right">&rarr;</button>
                 <button id="opening-brace">(</button>
                 <button id="closing-brace">)</button>
             </div>
