Cursor movement added

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <button id="delete">Del</button>
             </div>
             <div class="row">
-                <button id = 'cursor-left'>&larr;</button>
+                <button id = "cursor-left">&larr;</button>
                 <button id="cursor-right">&rarr;</button>
                 <button id="opening-brace">(</button>
                 <button id="closing-brace">)</button>
